--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,8 +1,8 @@
 .header
   .container
     .row
-      .span1
+      .span1.brand
         | TSGB
-      .span4.offset7
+      .span4.offset7.links
         | For scientists For publishers Login
 
