Basic styling and favicon

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,8 +9,9 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  */
-
+@import "variables";
 @import "bootstrap";
 @import "bootstrap-responsive";
 @import "pages";
 @import "typography";
+@import "boxes";
