--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -2,7 +2,8 @@
   .container
     .row
       .span1.brand
-        | TSGB
+        | Science
+        span.gist Gist
       .span4.offset7.links
         | For scientists For publishers Login
 
