Add admin controller and admin posts controller

--- a/app/views/admin/base/index.html.slim
+++ b/app/views/admin/base/index.html.slim
@@ -1,2 +1,5 @@
-h1 Admin::Base#index
-p Find me in app/views/admin/base/index.html.slim
+h1 Hi #{@user.email}
+
+h2 Users
+p We have #{@user_count} users
+
