Add ability to create posts in markdown, add ability to highlight code

--- a/app/views/admin/posts/_post.html.slim
+++ b/app/views/admin/posts/_post.html.slim
@@ -5,6 +5,6 @@ tr
   th= post.author
   th= post.published
   th
-    = link_to 'Edit', admin_post_path(post.id)
+    = link_to 'Edit', edit_admin_post_path(post.id)
     | &nbsp;
     = link_to 'Delete', admin_post_path(post.id), :method => :delete
