--- a/app/views/blog/_post.html.slim
+++ b/app/views/blog/_post.html.slim
@@ -2,4 +2,4 @@
   .span12
     h1= post.title
     p.information #{post.author} published on #{post.created_at}
-    p.content= post.content
+    p.content== post.html
