--- a/app/views/blog/_post.html.slim
+++ b/app/views/blog/_post.html.slim
@@ -1,5 +1,5 @@
 .row.post
   .span12
     h1= post.title
-    p.information #{post.author} published on #{post.created_at}
+    p.information #{post.author} published on #{post.friendly_created_at}
     p.content== post.html
