--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-html {
+body {
   font: 125%/1.5 freight-sans-pro, serif;
   color: #222;
   -webkit-font-smoothing: antialiased;
