--- a/app/views/admin/posts/_form.html.slim
+++ b/app/views/admin/posts/_form.html.slim
@@ -2,5 +2,6 @@
   = f.input :title
   = f.input :author
   = f.input :published
+  = f.input :published_at
   = f.input :content, :as => :text
   = f.button :submit
