--- a/app/views/admin/posts/index.html.slim
+++ b/app/views/admin/posts/index.html.slim
@@ -3,10 +3,11 @@ h1 Posts
 table.table
   tr
     th Id
-    th Createdat
+    th Created at
     th Title
     th Author
     th Published
+    th Published at
     th Actions
   - @posts.each do |post|
     = render 'post', post: post
