--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,9 +1,8 @@
 .header
   .container
     .row
-      .span1.brand
-        | Science
-        span.gist Gist
+      .span1
+        = render 'brand'
       .span4.offset7.links
         | For scientists For publishers Login
 
