--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -2,4 +2,5 @@ $color: #E92F4A;
 $font_color: #1A1A1A;
 $background_color: #F5F4F0;
 $blog_background_color: white;
-$header_color: darken($background_color, 10);
+//$header_color: darken($background_color, 10);
+$header_color: white;
