--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,8 +1,8 @@
-.header
+.header-launch
   .container
     .row
-      .span1
-        = render 'brand'
-      .span4.offset7.links
-        | For scientists For publishers Login
+      .span12
+        = render 'layouts/brand'
+      / .span4.offset7.links
+      /   | For scientists For publishers Login
 
