--- a/app/views/gists/new.html.slim
+++ b/app/views/gists/new.html.slim
@@ -1,2 +1,3 @@
-h1 Gists#new
-p Find me in app/views/gists/new.html.slim
+h1 Create a new gist
+= simple_form_for @gist do |f|
+  = render 'form', f: f
