Lots and lots of styling and gist form and gist creation

--- a/app/assets/stylesheets/boxes.css.scss
+++ b/app/assets/stylesheets/boxes.css.scss
@@ -3,5 +3,10 @@
   color: $font_color;
   margin-top: 6px;
   border-radius: 0;
+  padding: 6px;
+}
+
+.notice {
+  background-color: $color_1;
 }
 
