--- a/app/views/layouts/_brand.html.slim
+++ b/app/views/layouts/_brand.html.slim
@@ -1,6 +1,7 @@
 .brand
-  span
-    | Science
-    span.gist Gist
-    - if defined? title
-      span.title &nbsp;&ndash; #{title}
+  a#brand href='/'
+    span
+      | Science
+      span.gist Gist
+      - if defined? title
+        span.title &nbsp;&ndash; #{title}
