--- a/app/views/gists/new.html.slim
+++ b/app/views/gists/new.html.slim
@@ -1,3 +1,13 @@
-h1 Create a new gist
-= simple_form_for @gist do |f|
-  = render 'form', f: f
+
+- unless current_user
+  .new_user
+    h1 Hi there!
+    p Looks like you’re not our member yet, fill this out to join on the spot:
+    = simple_form_for @user, :html => { :class => "form-inline" },
+      :url => registration_path(:user) do |u|
+      = render 'users/form', f: u
+    p.small If you don’t want to join, you can still create new gists, but they will be considered anonymous and you won’t be entitled to the sweat of your brow.
+.new_gist
+  h1 Add a new gist
+  = simple_form_for @gist do |f|
+    = render 'form', f: f
