--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -6,6 +6,7 @@ $blog_background_color: white;
 $header_color: white;
 $shadow_color: darken($background_color,5);
 
+$box_color: white;
 //Theme colors
 $color_1: #C6F798;
 $default_button_color: lighten($color_1,24);
