--- a/app/assets/stylesheets/gists.css.scss
+++ b/app/assets/stylesheets/gists.css.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the gists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+div.span12 .gist {
+  background: $box_color;
+  @include nice_shadow;
+  margin-top: 20px;
+  padding: 6px;
+
+  .info {
+    font-style: italic;
+    .paper_author {
+      margin-right: 12px;
+    }
+    .gist_author {
+      margin-right: 12px;
+    }
+  }
+  .content {
+    font-family: freight-text-pro;
+  }
+}
