--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,4 +1,4 @@
-$color: #E92F4A;
+$color: #2ab573;
 $font_color: #1A1A1A;
 $background_color: #F5F4F0;
 $blog_background_color: white;
@@ -8,6 +8,6 @@ $shadow_color: darken($background_color,5);
 
 $box_color: white;
 //Theme colors
-$color_1: #C6F798;
-$default_button_color: lighten($color_1,24);
+$color_1: #2ab573;
+$default_button_color: lighten($color_1, 24);
 $placeholder_color: darken($shadow_color, 20);
