A bunch of stuff

--- a/app/assets/stylesheets/gists.css.scss
+++ b/app/assets/stylesheets/gists.css.scss
@@ -18,6 +18,6 @@ div.span12 .gist {
     }
   }
   .content {
-    font-family: freight-text-pro;
+    font-family: 'Open Sans', sans-serif;
   }
 }
