--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -8,7 +8,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   border-radius: 0;
   height: 30px;
   font-size: 16px;
-  font-family: freight-sans-pro;
+  font-family: 'Open Sans', sans-serif;
 }
 
 // Placeholder
