Add score to gists

--- a/app/views/gists/_gist_in_search.html.slim
+++ b/app/views/gists/_gist_in_search.html.slim
@@ -2,4 +2,13 @@
   .span12
     span.gist_author Gist author: #{gist.author_name}
     span.created_at Created: #{distance_of_time_in_words_to_now(gist.created_at)} ago
-    div.content== gist.content_html
+    div.content
+      | <strong>Gist:&nbsp;</strong>
+      == gist.content_html
+    div
+      span.score id="gist_#{gist.id}"
+        = gist.score
+      | &nbsp;
+      = link_to 'Vote up', vote_up_path(id: gist.id), class: 'vote_up'
+      | &nbsp;
+      = link_to 'Vote down', vote_down_path(id: gist.id), class: 'vote_down'
