--- a/app/views/papers/show.html.slim
+++ b/app/views/papers/show.html.slim
@@ -1,6 +1,7 @@
-h2 #{@paper.title}
-h5= @paper.metadata['authors']
-h5= @paper.metadata['journal']
-h2 Gists
-- @paper.gists.each_with_index do |gist, i|
-  = render 'gist', gist: gist, i: i + 1
+div.whatever
+  h2 #{@paper.title}
+  h5= @paper.metadata['authors']
+  h5= @paper.metadata['journal']
+  h2 Gists
+  - @paper.gists.each_with_index do |gist, i|
+    = render 'gist', gist: gist, i: i + 1
