Add new less hacky logo + favicons, start switching to Foundation framework

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,10 +12,9 @@
 
 @import "variables";
 @import "mixins";
-@import "bootstrap";
-@import "bootstrap-responsive";
 @import "pages";
 @import "gists";
 @import "typography";
 @import "boxes";
-@import "forms";
+@import "forms"; 
+@import "foundation_and_overrides";
