--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,15 +1,30 @@
-.header-launch
-  .container
-    .row
-      .span6
-        = render 'layouts/brand'
-      .span6.links
+nav.top-bar
+  ul.title-area
+    li.name
+      h1
+        a href="/"
+          = image_tag 'sciencegist-logo-small.png', class: 'logo', width: 24, height: 24
+          | ScienceGist
+    li.toggle-topbar.menu-icon
+      a href="#"
+        span
+
+  section class="top-bar-section"
+    ul.right
+      li.divider
+      li
         - if current_user
-          span
-            | <i class="icon-user icon-black"></i>
-            | Hi, #{current_user.email}!
-            = link_to 'Log out', destroy_user_session_path, :method => :delete
-        = link_to 'Add gist', new_gist_path
+          = link_to 'Your gists', gists_path
+        - else
+          = link_to "Sign up", user_registration_path
+          = link_to "Sign in", user_session_path
+      - if current_user
+        li.divider
+        li
+          = link_to "Log out", destroy_user_session_path, method: 'delete'
+      li.divider
+      li= link_to 'Add gist', new_gist_path
+
 
 
 
