--- a/app/views/pages/_search_form.html.slim
+++ b/app/views/pages/_search_form.html.slim
@@ -1,6 +1,8 @@
 .row
-  .span6.offset3
-    = form_tag(papers_path, :method => 'get', class: 'form-search') do
-      div.input-append
-        = text_field_tag(:search, params[:search], class: "span4 input-medium search-query", placeholder: 'Search papers by DOI or title')
-        = button_tag("Search", type: 'submit', class: "btn search")
+  .large-6.large-offset-3.columns
+    = form_tag papers_path, method: 'get' do
+      .row.collapse
+        .small-9.columns
+          = text_field_tag(:search, params[:search], class: " input-medium search-query",placeholder: 'Search papers by DOI or title')
+        .small-3.columns
+          = button_tag "Search", type: 'submit', class: "button prefix"
