Nicer buttons for the 'Add gist' form

--- a/app/views/gists/_form.html.slim
+++ b/app/views/gists/_form.html.slim
@@ -16,4 +16,4 @@ p
   | Describe in simple terms what the paper is about:
 = f.input :content, label: false, placeholder: 'The Gist'
 .submit
-  = f.button :submit, :class => 'btn btn-large no-border'
+  = f.button :submit, :class => 'btn'
